<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.recipes.Fragments.FragmentAbout"
    android:background="#eeeeee">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/textView7"
        android:layout_width="75dp"
        android:layout_height="30dp"
        android:layout_alignBaseline="@+id/textView4"
        android:layout_alignBottom="@+id/textView4"
        android:layout_toEndOf="@+id/textView4"
        android:layout_toRightOf="@+id/textView4"
        android:text="@string/firstName_item" />

    <TextView
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_alignBaseline="@+id/textView12"
        android:layout_alignBottom="@+id/textView12"
        android:layout_toEndOf="@+id/textView12"
        android:layout_toRightOf="@+id/textView12"
        android:text="@string/E_mail_item"
        android:clickable="true"
        android:autoLink="email"/>

    <TextView
        android:id="@+id/textView13"
        android:layout_width="116dp"
        android:layout_height="30dp"
        android:text="@string/numberPhone_item"
        android:layout_below="@+id/email"
        android:layout_toRightOf="@+id/textView10"
        android:layout_toEndOf="@+id/textView10"
        android:clickable="true"
        android:autoLink="phone"/>

    <TextView
        android:id="@+id/textView10"
        android:layout_width="116dp"
        android:layout_height="30dp"
        android:text="@string/Number_item"
        android:layout_below="@+id/textView12"
        android:layout_alignLeft="@+id/textView12"
        android:layout_alignStart="@+id/textView12" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="45dp"
        android:layout_height="30dp"
        android:layout_alignLeft="@+id/textView9"
        android:layout_alignStart="@+id/textView9"
        android:layout_below="@+id/textView9"
        android:text="@string/e_mail_item" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:layout_alignLeft="@+id/textView5"
        android:layout_alignStart="@+id/textView5"
        android:layout_below="@+id/textView5"
        android:text="@string/group_item" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="34dp"
        android:layout_height="30dp"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignStart="@+id/textView4"
        android:layout_below="@+id/textView4"
        android:text="@string/name_item" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="65dp"
        android:layout_height="30dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/Descr"
        android:layout_marginLeft="19dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="12dp"
        android:text="@string/familiya_item" />

    <TextView
        android:id="@+id/Descr"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:text="@string/about_blank_fragment"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:text="@string/GROP_item"
        android:layout_alignBaseline="@+id/textView9"
        android:layout_alignBottom="@+id/textView9"
        android:layout_toRightOf="@+id/textView9"
        android:layout_toEndOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="35dp"
        android:layout_height="30dp"
        android:layout_below="@+id/textView7"
        android:layout_toEndOf="@+id/textView5"
        android:layout_toRightOf="@+id/textView5"
        android:text="@string/NAME_item" />

    <EditText
        android:id="@+id/number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="phone"
        android:ems="10"
        android:inputType="phone"
        android:layout_below="@+id/textView13"
        android:layout_alignLeft="@+id/textView10"
        android:layout_alignStart="@+id/textView10" />

    <Button
        android:id="@+id/dial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/call_item"
        android:onClick="dial"
        android:layout_alignBaseline="@+id/number"
        android:layout_alignBottom="@+id/number"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/number"
        android:layout_toEndOf="@+id/number" />


</RelativeLayout>
