<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.recipes.Fragments.FragmentSearch">

    <!-- TODO: Update blank fragment layout -->


    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:hint="@string/namehint"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/Cat"
        android:textSize="20dp"
        android:textColor="@color/colorPrimaryDark" />
    <TableRow
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_height="1dp"
        android:layout_width="match_parent"
        android:background="@color/ser3"/>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <Button
        android:id="@+id/listVse"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="start|center_vertical"
        android:paddingLeft="20dp"
        android:text="Все  ▼"
        android:textSize="18dp"
        android:textColor="@color/serii"
        android:background="@color/colorTable"/>

    <ExpandableListView
        android:id="@+id/expListView"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:indicatorLeft="?android:attr/expandableListPreferredItemIndicatorLeft"
        android:divider="@color/colorTable"
        android:dividerHeight="0dp" />
</RelativeLayout>
    <TableRow
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_height="1dp"
        android:layout_width="match_parent"
        android:background="@color/ser3"/>
    <EditText
        android:id="@+id/editText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="70dp"
        android:ems="10"
        android:hint="@string/inghint"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/colorPrimary"
        android:text="@string/searchbut"
        android:textAllCaps="false"
        android:textColor="@color/white" />
</LinearLayout>
