<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.recipes.Fragments.FragmentBlyudo"
    style="@style/razmer">

    <!-- TODO: Update blank fragment layout -->
    <TableLayout style="@style/Tablelayout">
    <TableRow style="@style/Bludo">

        <ImageView
            android:id="@+id/ImageBlydo"
            style="@style/ImageBludo"
            android:src="@mipmap/ic_mak_kv" />

        <RelativeLayout style="@style/StrName">

            <TextView
                android:id="@+id/NameBlydo"
                android:text="Макароны с сыром"
                style="@style/Header" />

            <RatingBar
                android:id="@+id/Rating"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/NameBlydo"
                android:numStars="5"
                android:theme="@style/MyRatingBar" />
        </RelativeLayout>
    </TableRow>
        <TableRow style="@style/str">
            <TextView
                android:id="@+id/textView2"
                style="@style/BigText"
                android:text="@string/ingredient_item" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <ListView
                android:id="@+id/ingredients"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
        </TableRow>

        <TableRow style="@style/Gravity">

            <Button
                android:id="@+id/addProducts"
                style="@style/Button"
                android:text="@string/add_ingr_item" />
        </TableRow>
        <TableRow
            android:paddingTop="5dp"
            >
            <TextView
                style="@style/BigText"
                android:text="@string/cooking_item" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/Instruction"
                style="@style/opisanie"
                android:text="Подготовьте все ингредиенты для макарон по-американски.
Макароны можно взять любой формы и размера, обязательное условие -  внутри они должны быть полыми, чтобы соус туда проникал.
Сыр лучше взять нескольких сортов, отличающихся по вкусу.
Я взяла голландский, чеддер и немного пармезана.
Как приготовить макароны с сыром по-американски:
Приготовьте макароны в кастрюле согласно инструкции, обязательно обильно посолите воду." />
        </TableRow>

        <TableRow>

            <ImageView
                android:id="@+id/ImageBludo2"
                style="@style/BigImage"
                android:src="@mipmap/ic_maka" />
        </TableRow>
        <TableRow style="@style/OtsenZV">
            <RelativeLayout style="@style/span3">
                <TextView
                    android:id="@+id/textView10"
                    style="@style/otsenka"
                    android:text="@string/otsenka_item" />

                <RatingBar
                    android:id="@+id/rating2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/textView10"
                    android:layout_marginLeft="40dp"
                    android:numStars="5"
                    android:theme="@style/MyRatingBar" />
        </RelativeLayout>

        </TableRow>
    </TableLayout>
</ScrollView>
